<resources>
    <string name="payment">Payment</string>
    <string name="input_your_truemoney_wallet">Input your Truemoney Wallet number to activate your account</string>
    <string name="local_number">Thailand (+66)</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="confirm_account">Confirm</string>
    <string name="we_will_send_you_otp">We will send you OTP code to confirm your payment</string>
    <string name="otp_has_been_sent_to">OTP has been sent to</string>
    <string name="your_otp_code">Enter your OTP code</string>
    <string name="please_enter_the_6_digit">Please enter the 6-digit code we sent you</string>
    <string name="add_new_payment">Add new payment</string>
    <string name="are_you_sure_to_remove_your_payment_account">Are you sure to remove your payment account?</string>
    <string name="you_wont_be_able_to_use_it_for_wefresh_anymore">You won\'t be able to use it for WeFresh anymore.</string>
    <string name="add_card">Add Card</string>
    <string name="card_name">Name</string>
    <string name="card_name_hint">John Doe</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="credit_card_number_hint">Enter Card Number</string>
    <string name="card_expire_date">Expire Date</string>
    <string name="card_expire_date_hint">MM/YY</string>
    <string name="card_cvv">CVV</string>
    <string name="card_cvv_hint">CVV</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="please_input_name_and_surname">Please Input Name and Surname</string>
    <string name="invalid_credit_card_number">Invalid credit card number</string>
    <string name="invalid_expire_date">Invalid expire date</string>
    <string name="invalid_cvv">Invalid cvv</string>
    <string name="primary">Primary</string>
    <string name="set_as_default">Set as default</string>
    <string name="your_transaction_has_failed_due_to_some_technical_error_please_try_again">Your transaction has failed. Please try again</string>
    <string name="order_no">Order No. #</string>
    <string name="payment_failed">Payment failed</string>
    <string name="change_payment_method">Change payment method</string>
    <string name="try_again_later">Try again later</string>
    <string name="retry_with_this_card">Retry with this card (%1$s)</string>
    <string name="cod">cod</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="add_new_credit_card_error_title">Oops! Unable to add new credit card</string>
    <string name="credit_debit_card">Credit / debit card</string>
</resources>
